--- a/.github/workflows/osx.yml
+++ b/.github/workflows/osx.yml
@@ -5,9 +5,7 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
-env:
-  BUILD_TYPE: Release
+    
 jobs:
   build:
     runs-on: macos-latest
@@ -19,7 +17,7 @@ jobs:
       run: cd ${{github.workspace}}/silkcodec && cmake -B ${{github.workspace}}/silkcodec/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
 
     - name: Build
-      run: cd ${{github.workspace}}/silkcodec/build && cmake .. --config ${{env.BUILD_TYPE}}
+      run: cd ${{github.workspace}}/silkcodec/build && cmake ..
 
     - name: Make
       run: cd ${{github.workspace}}/silkcodec/build && make
