--- a/.github/workflows/lib.yml
+++ b/.github/workflows/lib.yml
@@ -86,6 +86,7 @@ jobs:
       with:
         name: osx
         path: ${{github.workspace}}/silkcodec/arm64.dylib
+        
   build_dotnetlib:
     runs-on: ubuntu-latest
     needs: [build_linux, build_windows, build_macos]
@@ -108,9 +109,23 @@ jobs:
             ${{github.workspace}}/SilkSharp/bin/Release/net8.0/publish/SilkSharp.dll
             ${{github.workspace}}/SilkSharp/bin/Release/net8.0/publish/SilkSharp.xml
             ${{github.workspace}}/SilkSharp/bin/Release/net8.0/publish/SilkSharp.pdb
+  
+  test_unit:
+    runs-on: ubuntu-latest
+    needs: [build_linux]
+    steps:
+    - uses: actions/checkout@v4
+    - name: Setup dotnet
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: '8.0.x'
+    - name: Build Test Unit
+      run: cd ${{github.workspace}}/SilkSharp.Test && dotnet build
+    - name: Test
+      run: cd ${{github.workspace}}/SilkSharp.Test && dotnet test
 
   create_nugetpack:
-    needs: [build_dotnetlib]
+    needs: [build_dotnetlib, test_unit]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
