--- a/.github/workflows/livebuild.yml
+++ b/.github/workflows/livebuild.yml
@@ -153,7 +153,7 @@ jobs:
 
       - name: Pack in
         run: |
-          dotnet pack ${{github.workspace}}/SilkSharp/SilkSharp.csproj --no-build --no-dependencies --no-restore -o ${{github.workspace}}/nuget -p:NuspecFile=${{github.workspace}}/nuget/SilkSharp.nuspec -p:NuspecBasePath=${{github.workspace}}/nuget/
+          dotnet pack ${{github.workspace}}/SilkSharp/SilkSharp.csproj -o ${{github.workspace}}/nuget -p:NuspecFile=${{github.workspace}}/nuget/SilkSharp.nuspec -p:NuspecBasePath=${{github.workspace}}/nuget/
       
       - name: Upload
         uses: actions/upload-artifact@v4
