--- a/nuget/SilkSharp.nuspec
+++ b/nuget/SilkSharp.nuspec
@@ -5,27 +5,27 @@
     <version>2.0.8-livebuild</version>
     <authors>Dr.Abc</authors>
     <owners>Dr.Abc</owners>
-    <requireLicenseAcceptance>false</requireLicenseAcceptance>
+    <requireLicenseAcceptance>true</requireLicenseAcceptance>
     <description>silk v3 codec binding, support WeChat and QQ</description>
     <tags>native dll silk audio format C# Skype WeChat QQ Tencent</tags>
     <readme>docs\README.md</readme>
     <dependencies>
       <group targetFramework=".NET8.0" />
     </dependencies>
-     <repository type="git" url="https://github.com/DrAbcOfficial/SilkSharp.git" branch="main" commit="5f9124e5bf6f8d571d327608da0dfa095c89c647" />
+     <repository type="git" url="https://github.com/DrAbcOfficial/SilkSharp.git" branch="main" />
      <license type="expression">GPL-3.0-or-later</license>
   </metadata>
   <files>
-    <file src="dotnet/SilkSharp.dll" target="lib\net8.0\SilkSharp.dll" />
-    <file src="dotnet/SilkSharp.xml" target="lib\net8.0\SilkSharp.xml" />
-    <file src="dotnet/SilkSharp.pdb" target="lib\net8.0\SilkSharp.pdb" />
-    <file src="win/x64.dll" target="runtimes\win-x64\native\silkcodec.dll" />
-    <file src="win/x86.dll" target="runtimes\win-x86\native\silkcodec.dll" />
-    <file src="linux/x64.so" target="runtimes\linux-x64\native\libsilkcodec.so" />
-    <file src="linux/x86.so" target="runtimes\linux-x86\native\libsilkcodec.so" />
-    <file src="linux/arm.so" target="runtimes\linux-arm\native\libsilkcodec.so" />
-    <file src="linux/arm64.so" target="runtimes\linux-arm64\native\libsilkcodec.so" />
-    <file src="osx/arm64.dylib" target="runtimes\osx-arm64\native\libsilkcodec.dylib" />
+    <file src="dotnet/SilkSharp.dll" target="lib/net8.0/SilkSharp.dll" />
+    <file src="dotnet/SilkSharp.xml" target="lib/net8.0/SilkSharp.xml" />
+    <file src="dotnet/SilkSharp.pdb" target="lib/net8.0/SilkSharp.pdb" />
+    <file src="win/x64.dll" target="runtimes/win-x64/native/silkcodec.dll" />
+    <file src="win/x86.dll" target="runtimes/win-x86/native/silkcodec.dll" />
+    <file src="linux/x64.so" target="runtimes/linux-x64/native/libsilkcodec.so" />
+    <file src="linux/x86.so" target="runtimes/linux-x86/native/libsilkcodec.so" />
+    <file src="linux/arm.so" target="runtimes/linux-arm/native/libsilkcodec.so" />
+    <file src="linux/arm64.so" target="runtimes/linux-arm64/native/libsilkcodec.so" />
+    <file src="osx/arm64.dylib" target="runtimes/osx-arm64/native/libsilkcodec.dylib" />
     <file src="README.md" target="docs\" />
   </files>
 </package>
