--- a/SilkSharp.NAudio/SilkSharp.NAudio.csproj
+++ b/SilkSharp.NAudio/SilkSharp.NAudio.csproj
@@ -4,6 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <IncludeSymbols>False</IncludeSymbols>
+    <PackageTags>NAudio Silk Audio</PackageTags>
+    <RepositoryType>git</RepositoryType>
+    <RepositoryUrl>https://github.com/DrAbcOfficial/SilkSharp</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/DrAbcOfficial/SilkSharp</PackageProjectUrl>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
