use nuget package for demo

--- a/SilkSharp.Demo/SilkSharp.Demo.csproj
+++ b/SilkSharp.Demo/SilkSharp.Demo.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SilkSharp\SilkSharp.csproj" />
+    <PackageReference Include="DrAbc.SilkSharp" Version="2.0.8" />
   </ItemGroup>
 
 </Project>
